syntax = "proto3";
package com.krickert.search.model.pipe;
option java_multiple_files = true;
import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";

message PipeDoc {
  string id = 1;
  string title = 2;
  string body = 3;
  repeated string keywords = 4;
  string document_type = 5;
  string revision_id = 6;
  google.protobuf.Timestamp creation_date = 7;
  google.protobuf.Timestamp last_modified = 8;
  google.protobuf.Struct custom_data = 9;
  optional SemanticData semantic_data = 10;
}

message SemanticData {
  map<string, SemanticDocument> chunkData = 8;
}

message SemanticDocument {
  repeated SemanticChunk chunks = 1;
  string parent_id = 2;
  map<string,string> metadata = 3;
}

message SemanticChunk {
  string chunk_id = 1;
  int64 chunk_number = 2;
  string chunk = 3;
  repeated float embeddings = 4;
}